--- a/232021_layout_nivetha/AboutUs/html/index.html
+++ b/232021_layout_nivetha/AboutUs/html/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="main_content">
       <div id="nav_bar">
-        <!-- <div id="logo"><img src="../assets/aroha_logo.png" /></div> -->
+        <div id="logo"><img src="../assets/aroha_logo.png" /></div>
         <nav class="nav">
           <ul>
             <li><a href="./index.html">Home</a></li>
@@ -19,12 +19,21 @@
           </ul>
         </nav>
       </div>
+      <div id="heading">
+        <h1>
+          We are Aroha Technologies
+          <hr id="designedHr1" />
+          <br />
+          Evolving since 2005
+          <hr id="designedHr2" />
+        </h1>
+      </div>
       <div id="image">
-        <img src="../assets/Girl_with_dog.svg" />
+        <img src="../assets/DataAnalysis.svg" />
       </div>
       <div id="content">
         <div id="about">
-          <h1>About Us</h1>
+          <h2>About Us</h2>
           <p>
             Aroha is your perfect partner to take you through the process of
             outsourcing your IT and providing you with the right methodologies
@@ -36,7 +45,7 @@
           </p>
         </div>
         <div id="services">
-          <h1>Services</h1>
+          <h2>Services</h2>
           <div id="s1">
             <p>
               We offer end to end IT solutions you can rely on. Amplify your
