--- a/JS_basic_Jeevan/Swap_assignment.html
+++ b/JS_basic_Jeevan/Swap_assignment.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS_Basics</title>
+    <title>Document</title>
 </head>
 
 <body>
 
 </body>
 
-<script src="./exercise_assignmentjsbasics.js">
+<script src="./Swap_assignment.js">
 </script>
 
 </html>
