--- a/JS_basic_Jeevan/index.html
+++ b/JS_basic_Jeevan/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <script src="./exercise_assignmentjsbasics.js">
+    <script src="./Js_assignment9-2-21.js">
     </script>
 </body>
 
